tests/failing/1-int_op_float_literal/main.rgo
int: @int
add: @add
exit: @exit

main: () {
    add(1.5, 2, (res: int){
        exit(0)
    })
}
